# cosmic-ext-applet-netspeed

./: .gitignore  Cargo.toml  README.md  justfile
res/: desktop_entry.desktop
src/: config.rs  lib.rs  main.rs  window.rs
